[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprite/BulletRight.png" type="Texture" id=1]
[ext_resource path="res://src/Bullet.gd" type="Script" id=2]
[ext_resource path="res://src/Explode.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 6 )

[node name="Bullet" type="RigidBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 4
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
Explode = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PointTopLeft" type="Position2D" parent="."]
position = Vector2( 8, -6 )

[node name="PointTopRight" type="Position2D" parent="."]
position = Vector2( 8, 6 )

[node name="PointBottomLeft" type="Position2D" parent="."]
position = Vector2( -8, -6 )

[node name="PointBottomRight" type="Position2D" parent="."]
position = Vector2( -8, 6 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
